Point Name (#337)
- corrected automated generated point names in leveling lines